--- a/static-blog/styles/globals.css
+++ b/static-blog/styles/globals.css
@@ -1,32 +1,37 @@
 .app {
   background-color: black;
-  
+  font-family: "Helvetica";
   color: white;
   font-size: 14px;
   width: 92%;
   height: 100%; 
   margin:0px;
-  margin-top: 0px;
   padding-left: 4%; 
   padding-right: 4%;
+  /* padding-top: 5%;
+  margin-left: -1%;
+  margin-top: -1%;
+  margin-bottom: -1%; */
 }
   
+body {
+  margin: 0;
+}
+
 .nav {
   color: black;
   font-size: 16px;
-  /* need to install poppins */
-  font-family: "Poppins";
   text-decoration: none;
 }
   
 .header {
   /* width: 100%; */
   text-decoration: none;
+  margin-bottom: 50px;
 }
   
 .title {
   color: white;
-  font-family: "Poppins";
   font-size: 50px;
   /* padding: "50px"; */
   font-weight: "bolder";
@@ -59,6 +64,7 @@
 .blog-grid {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   gap: 15px;
 }
 
@@ -66,6 +72,7 @@
   display: flex;
   flex-direction: column;
   gap: 5px;
+  width: 300px;
 }
 
 img {
@@ -93,19 +100,19 @@ h1 {
   color: black;
   text-decoration: none;
   margin: 0px;
-  font-family: "Poppins";
 }
 
 /* BlogPostCarousel.module.css */
 .carousel {
   display: flex;
   overflow-x: auto;
+  gap: 30px;
   scroll-snap-type: x mandatory;
   /* width: 60%; */
 }
 
 .slide {
-  flex: 0 0 31%;
+  flex: 0 0 30%;
   scroll-snap-align: start;
   /* Add any desired styling for the blog post slide */
 }
