--- a/static-blog/styles/globals.css
+++ b/static-blog/styles/globals.css
@@ -1,3 +1,7 @@
+/* @tailwind base;
+@tailwind components;
+@tailwind utilities; */
+
 .app {
   background-color: black;
   font-family: "Helvetica";
@@ -8,10 +12,6 @@
   margin:0px;
   padding-left: 4%; 
   padding-right: 4%;
-  /* padding-top: 5%;
-  margin-left: -1%;
-  margin-top: -1%;
-  margin-bottom: -1%; */
 }
   
 body {
