--- a/styles/globals.css
+++ b/styles/globals.css
@@ -13,18 +13,49 @@
 }
 
 .scrollbar::-webkit-scrollbar {
-	display: none;
-	/* height: 4px;
-	width: 4px;
-	border: 1px solid black; */
+	/* display: none; */
+	height: 10px;
+	width: 10px;
+	/* border-bottom: 2px solid pink; */
 }
 
 .scrollbar::-webkit-scrollbar-track {
-	/* background-color: transparent; */
+	background-color: rgba(43, 43, 43, 0.637);
+	height: 10px;
+	border-radius: 10px;
 }
 
 .scrollbar::-webkit-scrollbar-thumb {
 	/* background-color: rgb(0, 0, 0); */
+	background-color: black;
+	border-bottom: 2px solid rgb(74, 70, 70);
+	border-top: 2px solid rgb(65, 44, 44);
+	width: 5px;
+	height: 5px;
+	border-radius: 10px;
+}
+
+body::-webkit-scrollbar {
+	/* display: none; */
+	height: 10px;
+	width: 10px;
+	/* border-bottom: 2px solid pink; */
+}
+
+body::-webkit-scrollbar-track {
+	background-color: rgba(43, 43, 43, 0.637);
+	height: 10px;
+	border-radius: 10px;
+}
+
+body::-webkit-scrollbar-thumb {
+	/* background-color: rgb(0, 0, 0); */
+	background-color: black;
+	border-right: 2px solid rgb(74, 70, 70);
+	border-left: 2px solid rgb(65, 44, 44);
+	width: 5px;
+	height: 5px;
+	border-radius: 10px;
 }
 
 .kallistobold {
